--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,25 @@ header h2{
 .navbar{
     background-color: #901CAD;
 }
+
+.tab-content{
+    border:1px solid #DDD;
+    border-top: none;
+    padding: 10px;
+}
+
+.carousel-caption{
+    background-color: rgba(0,0,0,0.5);
+}
+
+.carousel{
+    border: solid #5637DD;
+}
+
+#carouselButton{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index:100;
+    
+}
